fix overflow bug

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -5,6 +5,12 @@
     padding: 0;
 }
 
+html,
+body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 html, body {
     height: 100%;
     width: 100%;
